the last update

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,13 @@
 <nav>
     <div class="container">
         <div class="content">
-            <div class="logo">Market</div>
+            <div id="Logo">
+                <li > 
+                    <a  routerLink="/">
+                        <img src="assets/images/pngegg.png"  alt="Logo" style="height: 90px;">
+                    </a>
+                </li>
+            </div>
             <ul>
                 <li routerLink="/">Products</li>
                 <li routerLink="/cart">Cart</li>
@@ -9,3 +15,23 @@
         </div>
     </div>
 </nav>
+<div id="navbar2">
+    <ul>
+
+      <li>  <a  routerLink="/"><strong>Home Page</strong></a> </li>
+      <li>  <a  routerLink="/1" ><strong>(Link Test1)</strong></a> </li>
+      <li>  <a  routerLink="/2"><strong>(Link Test2)</strong></a> </li>
+      <li>  <a  routerLink="/3" ><strong>(Link Test3)</strong></a> </li>
+      <li>  <a  routerLink="/4"><strong>(Link Test4)</strong></a>  </li>
+      <li>  <a  routerLink="/5" ><strong>(Link Test5)</strong></a> </li>
+      <li>  <a  routerLink="/6"><strong>(Link Test6)</strong></a> </li>
+      <li>  <a  routerLink="/7"><strong>(Link Test7)</strong></a> </li>
+      <li>  <a  routerLink="/8"><strong>(Link Test8)</strong></a> </li>
+      <li>  <a  routerLink="/9" ><strong>(Link Test9)</strong></a> </li>
+      <li>  <a  routerLink="/10"><strong>(Link Test10)</strong></a> </li>
+      <li>  <a  routerLink="/10"><strong>(Link Test11)</strong></a> </li>
+
+
+    </ul>
+
+</div>
