--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -1,22 +1,19 @@
 <div class="box mt-5">
+    <h1 class = "lg-title">Special Services Offers</h1>
     <div class="my-2 w-25">
-        <label for="" class="my-1">Categories:</label>
-         <select class="form-control" (change)="FilterProducts($event)">
-             <option value="All" selected>All</option>
-            <option value="{{option}}" *ngFor="let option of categories">{{option}}</option>
-         </select>
+        <app-select [data]="categories" [title]="'Categories'" (selectValue)="FilterProducts($event)"></app-select>
     </div>
     <div class="row" *ngIf="!loading">
-        <div class="col-md-3 col-sm-12" *ngFor="let item of products">
+        <div class="col-md-3 col-sm-12" *ngFor="let content of products">
             <div class="item">
-                <img src="{{item.image}}" alt="">
+                <img src="{{content.image}}" alt="">
                 <div class="body">
-                    <h4>{{item.title}}</h4>
-                    <p>{{item.description}}</p>
+                    <h4>{{content.title}}</h4>
+                    <p>{{content.description}}</p>
                 </div>
                 <div class="px-3 mb-2 d-flex justify-content-between align-items-center">
-                    <button class="btn btn-success">Add To Cart</button>
-                    <span>{{item.price}}$</span>
+                    <button class="btn btn-success" (click)="add(content)">Add To Cart</button>
+                    <span>{{content.price}}$</span>
                 </div>
             </div>
         </div>
