--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -1,6 +1,6 @@
 nav{
-    background: linear-gradient(to right,#950b0b,#440606);
-    color:#FFF;
+    background: white;
+    color:black;
 }
 nav .content{
     display:flex;
@@ -18,6 +18,55 @@ nav .content ul {
 nav .content ul li {
     cursor:pointer;
     font-size:22px;
-    color:#FFF;
+    color:black;
     text-decoration:none;
+}
+#navbar2
+{
+  position: relative;
+  width: 100%;
+  white-space: nowrap;
+  background: #ffff;
+  border: 1px solid ;
+  border-color: #707B7C;
+  overflow-x: auto; /* add this line */
+  z-index:1;
+
+
+}
+#navbar2 ul{
+
+  list-style-type: none;
+  text-align: center;
+  color: #707B7C;
+}
+
+#navbar2 li
+{
+  display: inline-block;
+  padding: 7px;
+}
+#navbar2 li a{
+  font-size: 15px;
+  text-decoration: none;
+  color: #707B7C;
+
+}
+#navbar2 li a:hover {
+  color: lightgreen;
+
+}
+#navbar2::-webkit-scrollbar {
+  width: 10px;
+  height: 4px;
+
+}
+
+#navbar2::-webkit-scrollbar-track {
+  background-color: #F5F5F5;
+}
+
+#navbar2::-webkit-scrollbar-thumb {
+  background-color: #707B7C;
+  border-radius: 10px;
 }
